Fri Sep 05 11:20:20 2014  Jiri (George) Lebl <jirka@5z.com>

	* tutors/cantor.gel: Add Cantor's staircase tutorial

Fri Sep 05 01:52:10 2014  Jiri (George) Lebl <jirka@5z.com>

	* tutors/*: add a simple strange-attractor tutorial

	* src/tutors.[ch], src/gnome-genius.c: add a tutorials menu
	  to load same programs, Right now really simple, eventually should
	  have submenus, and have to figure out translation

Tue Sep 02 10:12:42 2014  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: minor fixes

Tue Sep 02 00:58:58 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Add SurfacePlotDrawLine, SurfacePlotDrawPoints, and
	  SurfacePlotClear

	* help/C/genius.xml: Add documentation for the above functions

	* src/graphing.c: Add rotate animation

Sat Aug 30 17:10:23 2014  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: fix spelling, update grant info

Sat Aug 30 15:40:00 2014  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/gtkplotflux.c: fix almost zero arrows causing NaNs causing
	  postscript errors.

Fri Aug 29 10:41:36 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: fix compilation on my old ubuntu 10.04 laptop

Tue Aug 26 11:56:12 2014  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.18

Thu Aug 21 18:08:53 2014  Jiri (George) Lebl <jirka@5z.com>

	* pixmaps/Makefile.am: fix gtk-update-icon-cache logic

	* help/C/genius.xml, help/C/make-and-upload.sh: use userinput instead
	  of synopsis in the list of operators, the thing is, "synopsis" was
	  tripping up dblatex which produces an actually sane pdf so we
	  definitely want to use it

Thu Aug 21 16:55:25 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c, src/compil.c: change the encoding/decoding of strings
	  to be not stupid, waste a byte and add more legal characters to the
	  list.  Also remove extra unneeded letters from the function record,
	  streamlining things a bit more.  Altogether save another 2.7k from
	  the compiled standard library.
