@@ -2,6 +2,9 @@ tutordir = \
 	$(datadir)/genius/tutors/
 tutor_DATA = \
 	strange-attractor.gel \
-	cantor.gel
+	cantor.gel \
+	laplace-fdm.gel \
+	lorenz.gel \
+	standing-waves.gel
 EXTRA_DIST = \
 	$(tutor_DATA)
