@@ -1,3 +1,8 @@
+Fri Sep 05 12:56:05 2014  Jiri (George) Lebl <jirka@5z.com>
+
+	* tutors/*.gel: Add a few more tutorials (lorenz, finite difference
+	  method, standing waves)
+
 Fri Sep 05 11:20:20 2014  Jiri (George) Lebl <jirka@5z.com>
 
 	* tutors/cantor.gel: Add Cantor's staircase tutorial
